fix: 🐛 Border radius & Gap for pinned chats

--- a/custom.css
+++ b/custom.css
@@ -24,7 +24,7 @@ To open dev tools, open the command bar and type "open console"
   --color-on-primary: #000 !important;
   --color-highlight-reaction: #56add500 !important;
 
-  --version: "0.7"
+  --version: "0.7.1"
 }
 
 /*
@@ -289,6 +289,21 @@ To open dev tools, open the command bar and type "open console"
   left: calc(50% - 32px / 2);
   background-color: var(--color-primary);
   animation: wui-w-center 0.3s 1;
+}
+
+/* Fix border radius for pinned threads */
+.PinnedThreadListItem-module__wrapper.PinnedThreadListItem-module__isSelected,
+.PinnedThreadListItem-module__wrapper.PinnedThreadListItem-module__isSelected::before {
+  border-radius: 4px;
+  border-top-left-radius: 4px !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-left-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+}
+
+/* Add gap to pinned threads */
+.pinned-threads {
+  gap: 4px !important;
 }
 
 /* Blue indicator when selected in main chats */
